# data-platform-backend

./: .env  .env.example  .gitignore  API_DOCUMENTATION.md  CACHE_SETUP_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CLIENT_MIGRATION_GUIDE.md  CODE_REVIEW_REPORT.md  DATA_IMPORT_SUMMARY.md  Makefile  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  PAGINATION_IMPLEMENTATION.md  PAGINATION_PHASE_COMPLETE.md  PAGINATION_TEST_REPORT.md  README.md  REPORT_IMPORT_STRATEGY.md  main.py  migrate_from_duckdb.py  pr_body.md  pyproject-bak.toml  pyproject.toml  run_migration.py  test_bulk_import_performance.py
.cursor/commands/: context-sync.mdc  refresh-context.mdc
.cursor/rules/: code-quality-linus.mdc  context-state.json  context-sync.mdc  django-application-rules.mdc  django-database-interaction-rules.mdc  django-error-handling-rules.mdc  django-ninja-route-rules.mdc  django-performance-optimization-rules.mdc  django-pydantic-schemas-rules.mdc  external-django-general.mdc  external-django-settings.mdc  git-workflow-rules.mdc  pagination-rules.mdc  pagination-unification-rules.mdc  project-status.mdc  project-workflow-uv.mdc  projects-feature-rules.mdc
_tasks/2025-11-11-documentation-audit-and-update/: 001-documentation-audit-findings.md  002-completion-summary.md  003-version-migration-log.md  004-fastapi-archival-summary.md
_tasks/2025-11-11-studies-export-feature/: 001-implementation-plan.md  003-implementation-summary.md
_tasks/2025-11-14-rules-compliance-audit/: 001-error-handling.md  002-pagination-and-routing.md  003-database-interaction.md  004-performance-and-caching.md  005-auth-and-permissions.md  006-style-and-maintainability.md  README.md
ai/: __init__.py  api.py  apps.py  models.py  schemas.py  tasks.py
ai/migrations/: 0001_initial.py  0002_classificationguideline_questions.py
ai/services/: __init__.py  batch_analysis_service.py  guideline_service.py  llm_service.py  review_service.py  sampling_service.py
common/: __init__.py  admin.py  apps.py  auth_api.py  auth_schemas.py  base_pagination.py  config.py  exceptions.py  export_service.py  middleware.py  models.py  pagination.py  permissions.py  schemas.py
config/: apps.py  settings.py  urls.py  wsgi.py
docs/: 001_README.md  002_DOCUMENT_INDEX.md  003_DEVELOPMENT_SETUP.md  004_API_REFERENCE.md  005_TROUBLESHOOTING.md  006_PRD_PHASE3.md  007_PRD_PHASE3_TECHNICAL.md  008_README_EN.md  009_README_ZH_TW.md  012_LINUS_PRINCIPLES_CODE_ANALYSIS.md  COMPLETION_REPORT.md  DOCUMENTATION_STYLE.md  DOCUMENTATION_SUMMARY.md  DOCUMENT_INDEX.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE-report.md  QUICK_REFERENCE.md  README.en.md  README.zh-TW.md  README_ZH.md  rename_docs.bat  用户總結.txt
docs/architecture/: 設計文件_系統架構_2025-01-13.md
docs/authentication/: token-blacklist.md
docs/backend/: PAGINATION_DESIGN.md  PAGINATION_REQUIREMENTS.md
docs/implementation/: 實作狀態_當前進度_2025-01-13.md
docs/migration/: 101_DJANGO_MIGRATION_LINUS_APPROVED.md  DJANGO_MIGRATION_LINUS_APPROVED.md
docs/planning/: 技術債務清理_工作流程_2025-01-13.md  路線圖_開發計畫_2025-01-13.md
docs/requirements/: 需求規格_專案總覽_2025-01-13.md
imports/: __init__.py  admin.py  api.py  apps.py  models.py  parsers.py  schemas.py  services.py
imports/migrations/: 0001_initial.py  __init__.py
project/: __init__.py  api.py  apps.py  models.py  schemas.py  service.py
project/services/: accession_resolver.py  resource_aggregator.py  search_providers.py  search_registry.py  search_utils.py
project/tests/: test_resource_aggregation.py  test_search.py
report/: __init__.py  api.py  apps.py  models.py  schemas.py  service.py  signals.py
report/migrations/: 0001_initial.py  0002_report_search_vector_and_more.py  0003_populate_search_vector.py  0004_add_pg_trgm_extension.py  0005_add_imaging_generated_columns.py  0006_add_gin_trigram_indexes.py  0007_add_imaging_fields_to_model_state.py  0008_improve_generated_columns_with_functions.py  0009_rename_report_ai_a_report__b98221_idx_idx_report_annotation_type_and_more.py  0010_create_aiannotation_with_new_fields.py
report/services/: __init__.py  query_builder.py
report/tests/: test_advanced_search.py  test_regex_search.py  test_study_field_queries.py
rules/: README.mdc  database-interaction-rules.mdc  error-handling-rules.mdc  fastapi-application-rules.mdc  fastapi-route-specific-rules.mdc  linus-code-review-standards.mdc  performance-optimization-rules.mdc  pydantic-model-rules.mdc  python-general-principles.mdc  uv-project-management.mdc
scripts/: DATABASE_BACKUP_GUIDE.md  README.md  backup_database.py  migrate_from_duckdb.py  refresh_context.py  restore_database.py  run_migration.py  test_bulk_import_performance.py
studies/: __init__.py  admin.py  api.py  apps.py  auth_api.py  auth_schemas.py  base_pagination.py  config.py  exceptions.py  export_service.py  middleware.py  models.py  pagination.py  permissions.py  project_api.py  project_service.py  report_api.py  report_service.py  schemas.py  services.py  tests.py
studies/migrations/: 0001_initial.py  0002_add_validation_workflow_tables.py  0002_report_reportsearchindex_reportsummary_reportversion.py  0003_alter_report_uid.py  0004_merge_20251112_1541.py  0005_add_export_task_model.py  0006_remove_llmanalysisresult_study_and_more.py  (+2 more)
study/: __init__.py  api.py  apps.py  models.py  schemas.py  services.py
tests/: test_api_contract.py  test_base_pagination.py  test_caching.py  test_export.py  test_imports.py  test_middleware.py  test_models.py  test_multi_question_structured.py  test_pagination.py  test_project_api.py  test_project_service.py  test_report_service_sort.py  test_services.py
(+21 files in other folders)
