[project]
name = "backend-django"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django==5.0.0",
    "django-cors-headers==4.3.1",
    "django-ninja==1.3.0",
    "duckdb==1.4.1",
    "email-validator==2.1.0",
    "openpyxl==3.1.5",
    "pandas==2.2.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.0",
    "pyjwt==2.10.1",
    "python-dotenv==1.0.0",
]
