[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-django"
version = "1.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pycosat==0.6.6",
    "pycparser==2.21",
    "pydantic==2.10.3",
    "pydantic-core==2.27.1",
    "pydantic-settings==2.12.0",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.3",
    "httpx>=0.27.0",
    "rich==13.9.4",
    "ruamel-yaml==0.18.10",
    "ruamel-yaml-clib==0.2.12",
    "setuptools==78.1.1",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "superclaude==4.1.6",
    "tqdm==4.67.1",
    "truststore==0.10.0",
    "types-python-dateutil==2.9.0.20251115",
    "types-pyyaml==6.0.12.20250915",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "uv==0.8.4",
    "wheel==0.45.1",
    "zstandard==0.23.0",
    "django==5.2.8",
    "django-cors-headers==4.9.0",
    "django-ninja==1.5.0",
    "django-ninja-extra==0.30.6",
    "django-ninja-jwt==5.4.2",
    "django-stubs==5.2.7",
    "django-stubs-ext==5.2.7",
    "psycopg2-binary==2.9.11",
    "pandas==2.3.3",
    "openpyxl==3.1.5",
    "numpy==2.3.5",
    "funboost==53.4",
]

[tool.setuptools]
packages = ["study", "common", "config", "report", "project"]

[project.optional-dependencies]
dev = [
    "sphinx",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-design",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = [
    ".*/migrations/.*",
    "manage.py",
    "tests/.*",
    "scripts/.*",
]

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "psycopg2.*",
    "studies.config",
    "studies.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "study.models",
    "report.models",
    "project.models",
    "common.models",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "psycopg2.*",
    "studies.config",
]
ignore_missing_imports = true
